--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -16,7 +16,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # run tests
+    # setup node env
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'
+
+    - name: Install dependencies
+      run: npm install
+
+      # run tests
     - name: Run tests
       run: npm test
     
