--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "express-session": "^1.18.0",
+    "express-session": "^1.0.0",
+    "npm-audit-html": "^1.5.0",
     "request-ip": "^3.3.0"
   },
   "devDependencies": {
